--- a/README.html
+++ b/README.html
@@ -1,10 +1,10 @@
 <h1>ActiveDirectory-Password-Change</h1>
 <ul>
 <li>Install dependencies with <a href="https://github.com/bower/bower">bower</a>.</li>
-<li>Set variables<ul>
-<li>ldapuser</li>
-<li>ldappwd</li>
-<li>ldaphost</li>
+<li>Set variables in <code>index.php</code><ul>
+<li><code>ldapuser</code></li>
+<li><code>ldappwd</code></li>
+<li><code>ldaphost</code></li>
 </ul>
 </li>
 </ul>
