--- a/README.html
+++ b/README.html
@@ -1,4 +1,5 @@
 <h1>ActiveDirectory-Password-Change</h1>
+<p><img src="" alt="Git Update Task picture"></p>
 <ul>
 <li>Install dependencies with <a href="https://github.com/bower/bower">bower</a>.</li>
 <li>Set variables in <code>index.php</code><ul>
