added grunt tasks

--- a/README.html
+++ b/README.html
@@ -3,7 +3,7 @@
 <ul>
 <li>Install dependencies with <a href="https://github.com/bower/bower">bower</a></li>
 <li>Run a bower update in the project root</li>
-<li>Add an ActiveDirectory user who has the right to reset a user&#39;s password</li>
+<li>Add an ActiveDirectory user which has the right to reset a user&#39;s password</li>
 <li>Set variables in <code>index.php</code><ul>
 <li><code>$ldapuser</code></li>
 <li><code>$ldappwd</code></li>
@@ -13,7 +13,7 @@
 </li>
 <li>Move the project on a webserver<ul>
 <li>Support for php ldap module must be enabled</li>
-<li>SSL certified when publish the site in the internet</li>
+<li>Use a SSL certified connection when publishing the site to the internet</li>
 </ul>
 </li>
 <li>Open the password change website like this <code>https://site.yourdomain.com/index.php?sec=[your secure key from $SecKey]</code></li>
