--- a/README.html
+++ b/README.html
@@ -1,4 +1,4 @@
-<h1>ActiveDirectory-Password-Change</h1>
+<h1 id="activedirectory-password-change">ActiveDirectory-Password-Change</h1>
 <p><img src="https://raw.github.com/janikvonrotz/ActiveDirectory-Password-Change/master/doc/screenshot.png" alt="Screenshot"></p>
 <ul>
 <li>Install dependencies with <a href="https://github.com/bower/bower">bower</a></li>
